src/static/assets/th-2020/live-app.css
/* ... */
@media (max-width: 776px) {
    h1 {
        font-size: 2rem;
    }
    h4 {
        font-size: 1.2rem;
    }
    .th-logo {
        width: 20px;
    }
    #logo-2020 {
        max-width: 300px;
    }
    .mb-5 {
        margin-bottom: 1.5rem!important;
    }
    .container-fluid {
        margin-bottom: 40px;
    }
    #email-tag {
        font-size: 1rem;
        font-weight: 500;
    }
    #left-bar {
        width: 35px;
        left: 18px;
        top: 60px;
        height: 0px;
    }
    #top-bar {
        height: 35px;
        top: 25px;
        right: 0px;
        animation-name: fill-horizontal-rect-small;
    }
    #right-bar {
        width: 35px;
        bottom: -60px;
        height: 0px;
    }
    #bottom-bar {
        height: 35px;
        bottom: -95px;
        left: 17.5px;
        animation-name: fill-horizontal-rect-small;
    }
    #landing .row {
        padding: 10px;
        padding-left: 6vw;
    }
    .landing-info-wrapper {
        position: relative;
        padding: 10px;
        text-align: left;
    }
    .landing-info-wrapper h4 {
        font-size: 1.5rem;
    }
    .landing-info-wrapper .header-info {
        margin-bottom: 0px;
    }
    #landing .col-lg-5 img {
        max-width: 325px;
        margin: 80px auto 60px;
    }
    #landing .social-media-container{
        transform: scale(0.75);
        position: relative;
        top: 5px;
    }
    #email-form input {
        width: 100%;
        margin: 0px !important;
    }
    #email-form .input-group-append,
    #email-form button,
    #email-form .btn {
        width: 100%;
        margin: 0px !important;
    }
    #email-form button,
    #email-form .btn {
        padding: 7.5px !important;
        margin-top: 5px !important;
    }
    #top-nav-bar {
        padding-top: 45px !important;
    }
    .d-block-sm-none {
        display: none !important;
    }
    input.form-control {
        padding: 22px 14px;
    }
    #top-nav-bar div .main-nav-ui li>a {
        font-size: 14px;
    }
    #aa-logo {
        width: 90%;
    }
    #jpmc-logo {
        width: 70%;
        margin-left: auto !important;
    }
    #mlh-logo{
        max-width: 100px;
    }

    .mb-purple{
        background-color: #6F85FB;
    }
    
    .mb-pink{
        background-color: #FF5482;
    }
    
    .mb-blue{
        background-color: #7FC0FA;
    }
    #mc_embed_signup{
        margin-left: -10px;
        margin-right: auto;
    }
    .mentor-button, .devpost-button{
        font-size: 1.1rem;
    }
    .parking-card h6 {
        font-size: 16px;
    }

    #prizes-large{
        display: none;
    }

    #prizes-small{
        display: inherit;
    }
}

@media (max-width: 576px) {
    #landing .row {
        width: auto;
    }
    .landing-info-wrapper h4,
    #email-tag {
        font-size: 1.0rem;
    }
    #landing .col-lg-5 img {
        margin-bottom: 30px;
    }
    input[type=email] {
        font-size: 14px;
    }
    #th-apply {
        width: 100%;
        padding: 0px !important;
        float: left;
    }
    #mc_embed_signup{
        margin-left: -10px;
        margin-right: -10px;
    }
    #th-devpost, #th-mentor{
        flex: 0 0 100%;
    }
    .plusminus{
        top: 30px;
    }
    .devpost-button, .mentor-button{
        width: calc(100% - 20px);
    }
    #landing .col-lg-7{
        margin-top: 30px;
    }
}

@media (max-width: 466px){
    .social-media-container{
        left: -17px;
    }
    #email-tag{
        margin-top: 1rem;
        margin-bottom: 0px;
    }
}

@keyframes fill-horizontal-rect {
    from {
        width: 0px;
    }
    to {
        width: calc(100% - 35px);
    }
}

@keyframes fill-vertical-rect {
    from {
        height: 0px;
    }
    to {
        height: 100%;
    }
}

@keyframes fill-horizontal-rect-small {
    from {
        width: 0px;
    }
    to {
        width: calc(100% - 17.5px);
    }
}


.plusminus {
    position: absolute;
    top: 35px;
    right: 25px;
    width: 15px;
    height: 15px;
    /* Vertical line */
    /* horizontal line */
  }
  .plusminus:before, .plusminus:after {
    content: "";
    position: absolute;
    background-color: black;
    transition: transform 0.25s ease-out;
  }
  .plusminus:before {
    top: 0;
    left: 50%;
    width: 3px;
    height: 100%;
    margin-left: -1.5px;
  }
  .plusminus:after {
    top: 50%;
    left: 0;
    width: 100%;
    height: 3px;
    margin-top: -1.5px;
  }
  .plusminus:hover {
    cursor: pointer;
  }
  .plusminus-clicked:before {
    transform: rotate(90deg);
  }
  .plusminus-clicked:after {
    transform: rotate(180deg);
  }

